# counterhub

./: .env.example  AGENTS.md  README.md  mise.toml  pyproject.toml  requirements.txt  zensical.toml
.agents/skills/library-skills/: .library-skills.json
.devcontainer/: devcontainer.json
.github/workflows/: deploy.yml
app/: main.py
docs/: index.md
docs/database/: schema.md
docs/dev/contributing/: naming-conventions.md
docs/dev/contributing/documentation-principles/: principle-4-link-to-code.md
docs/workflows/: deployment.md  local-development.md
scripts/: setup.sh
supabase/: config.toml  seed.sql
supabase/migrations/: 20260616190903_initial_schema.sql  20260616233506_remote_schema.sql  20260617000000_create_counters.sql  20260621205825_initial_counter_daily_schema.sql  20260621214918_register_dotfiles_counter.sql
tests/: test_main.py
