[project]
name = "counterhub"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["fastapi[standard]>=0.137.1"]

[dependency-groups]
dev = [
  "prek>=0.3.11",
  "pytest>=9.0.3",
  "pytest-cov>=7.1.0",
  "ruff>=0.15.12",
  "ty>=0.0.34",
  "zensical>=0.0.39",
]
